; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shaderparser.c_gl_unwrap_storage_struct.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shaderparser.c_gl_unwrap_storage_struct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_shader_parser = type { i32 }
%struct.shader_struct = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, %struct.shader_var* }
%struct.shader_var = type { i32 }
%struct.dstr = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"_\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gl_shader_parser*, %struct.shader_struct*, i8*, i32, i8*)* @gl_unwrap_storage_struct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gl_unwrap_storage_struct(%struct.gl_shader_parser* %0, %struct.shader_struct* %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.gl_shader_parser*, align 8
  %7 = alloca %struct.shader_struct*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca %struct.dstr, align 4
  %12 = alloca i64, align 8
  %13 = alloca %struct.shader_var*, align 8
  store %struct.gl_shader_parser* %0, %struct.gl_shader_parser** %6, align 8
  store %struct.shader_struct* %1, %struct.shader_struct** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %14 = call i32 @dstr_init(%struct.dstr* %11)
  %15 = load i8*, i8** %10, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %5
  %18 = load i8*, i8** %10, align 8
  %19 = call i32 @dstr_copy(%struct.dstr* %11, i8* %18)
  br label %20

20:                                               ; preds = %17, %5
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 @dstr_cat(%struct.dstr* %11, i8* %21)
  %23 = call i32 @dstr_cat(%struct.dstr* %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i64 0, i64* %12, align 8
  br label %24

24:                                               ; preds = %44, %20
  %25 = load i64, i64* %12, align 8
  %26 = load %struct.shader_struct*, %struct.shader_struct** %7, align 8
  %27 = getelementptr inbounds %struct.shader_struct, %struct.shader_struct* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp ult i64 %25, %29
  br i1 %30, label %31, label %47

31:                                               ; preds = %24
  %32 = load %struct.shader_struct*, %struct.shader_struct** %7, align 8
  %33 = getelementptr inbounds %struct.shader_struct, %struct.shader_struct* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 1
  %35 = load %struct.shader_var*, %struct.shader_var** %34, align 8
  %36 = load i64, i64* %12, align 8
  %37 = getelementptr inbounds %struct.shader_var, %struct.shader_var* %35, i64 %36
  store %struct.shader_var* %37, %struct.shader_var** %13, align 8
  %38 = load %struct.gl_shader_parser*, %struct.gl_shader_parser** %6, align 8
  %39 = load %struct.shader_var*, %struct.shader_var** %13, align 8
  %40 = load i32, i32* %9, align 4
  %41 = getelementptr inbounds %struct.dstr, %struct.dstr* %11, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @gl_write_storage_var(%struct.gl_shader_parser* %38, %struct.shader_var* %39, i32 %40, i32 %42)
  br label %44

44:                                               ; preds = %31
  %45 = load i64, i64* %12, align 8
  %46 = add i64 %45, 1
  store i64 %46, i64* %12, align 8
  br label %24

47:                                               ; preds = %24
  %48 = call i32 @dstr_free(%struct.dstr* %11)
  ret void
}

declare dso_local i32 @dstr_init(%struct.dstr*) #1

declare dso_local i32 @dstr_copy(%struct.dstr*, i8*) #1

declare dso_local i32 @dstr_cat(%struct.dstr*, i8*) #1

declare dso_local i32 @gl_write_storage_var(%struct.gl_shader_parser*, %struct.shader_var*, i32, i32) #1

declare dso_local i32 @dstr_free(%struct.dstr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
